@@ -1,12 +1,14 @@
 AM_CPPFLAGS = $(DBUS_CFLAGS) $(EBOOK_CFLAGS) -Wall
 AM_LDFLAGS = $(DBUS_LIBS) $(EBOOK_LIBS)
 
-bin_PROGRAMS = eds-add-remove eds-bookview eds-edit-vcard eds-get-vcard
+bin_PROGRAMS = eds-add-remove eds-bookview eds-edit-vcard eds-get-contacts eds-get-vcard
 
 eds_add_remove_SOURCES = eds-add-remove.c util.h util.c
 
 eds_bookview_SOURCES = eds-bookview.c util.h util.c
 
 eds_edit_vcard_SOURCES = eds-edit-vcard.c util.h util.c
+
+eds_get_contacts_SOURCES = eds-get-contacts.c util.h util.c
 
 eds_get_vcard_SOURCES = eds-get-vcard.c util.h util.c
